fixed a data out of order bug on sensor graph, fixed tooltip displaying on incoming data when it shouldnt

--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,5 +1,5 @@
 <div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px; min-width: 800px; min-height: 900px">
-    <div layout="column" style="min-height: 180px;">
+    <div layout="column" style="min-height: 200px;">
         <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
             <span style="margin-top: -10px" flex>Sensor Values</span>
             <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="font-size: 14px">
@@ -28,7 +28,7 @@
                 <span style="width: 120px;" class="subheader-text">
                     Sensor
                 </span>
-                <span style="width: 125px;" class="subheader-text">
+                <span style="width: 88px;" class="subheader-text">
                     Value
                 </span>
                 <span style="width: 62px;" class="subheader-text">
@@ -40,14 +40,14 @@
             </div>
         </md-toolbar>
         <div class="md-whiteframe-z1" flex style="padding: 8px;" layout="row">
-            <compass-chart redraw-function="vm.redrawCompass" style="min-width: 100px; min-height: 100px;">
+            <compass-chart redraw-function="vm.redrawCompass" style="min-width: 120px; min-height: 120px;">
             </compass-chart>
-            <div layout="column" style="margin-left: 24px;">
+            <div flex layout="column" style="margin-left: 56px;">
                 <div ng-repeat="sensor in vm.ancResource.sensorList track by $index" title="{{sensor.description}}"
                      class="resource-sensor-item" ng-if="sensor.name !== 'wind direction'"
                      layout="row" class="unselectable">
                     <span style="min-width: 120px" ng-class="vm.classNameFromPythonID(sensor)">{{sensor.name}}</span>
-                    <span class="resource-sensor-value-item" style="width: 120px"
+                    <span class="resource-sensor-value-item" style="width: 80px"
                           ng-show="sensor.sensorValue">{{sensor.value | number:1}}</span>
                     <span style="margin-left: 8px; width: 60px" ng-if="vm.maxSensorValue[sensor.name]">
                         {{vm.maxSensorValue[sensor.name].value | number:1}}
