--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -1,5 +1,5 @@
 <div ng-controller="CamComponentsCtrl as vm"
-     style="margin-left: auto; margin-right: auto; min-width: 1100px; max-width: 1100px; padding-left: 16px; padding-right: 16px;">
+     style="margin-left: auto; margin-right: auto; min-width: 1100px; max-width: 1100px; padding: 0 8px">
 
     <div class="cam-build-info" layout-align="center center" layout="column">
         <div flex style="padding: 16px;" class="md-whiteframe-z5" layout="column">
@@ -46,17 +46,17 @@
             <span style="width: 160px;" class="subheader-text">
                 Component
             </span>
-            <span style="width: 110px; margin-left: 16px;" class="subheader-text">
+            <span style="width: 130px;" class="subheader-text">
                 IP:Port
             </span>
-            <span style="width: 180px; margin-left: 16px;" class="subheader-text">
+            <span style="width: 180px;" class="subheader-text">
                 Version
             </span>
-            <span flex style="margin-left: 16px;" class="subheader-text">
+            <span flex class="subheader-text">
                 Build State
             </span>
         </div>
-        <span style="position: absolute; right: 0; bottom: 0; margin-right: 44px;" class="subheader-text">
+        <span style="position: absolute; right: 44px; bottom: 0;" class="subheader-text">
                 KATCP Logging</br>
             Devices | Proxy
             </span>
@@ -79,9 +79,9 @@
                     <span ng-show="vm.resourcesNames[key].connected" class="green-color"><b>{{::key | uppercase}}</b></span>
                 </span>
                 <span>{{::vm.resourcesNames[key].host}}</span>
-                <span style="width: 38px; margin: 0">:{{::vm.resourcesNames[key].port}}</span>
-                <span style="width: 180px;"><i>{{::vm.resourcesNames[key].api_version}}</i></span>
-                <span flex><i>{{::vm.resourcesNames[key].build_state}}</i></span>
+                <span style="width: 58px; margin: 0">:{{::vm.resourcesNames[key].port}}</span>
+                <span style="width: 180px;"><i>{{vm.resourcesNames[key].sensors.api_version.value}}</i></span>
+                <span flex><i>{{vm.resourcesNames[key].sensors.build_state.value}}</i></span>
 
                 <div layout="row">
                     <md-switch ng-if="vm.resourcesNames[key].sensors.logging_katcpmsgs_devices_enabled"
