fixed central logger and ganglia links to point to head node

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content style="border-bottom: 1px solid #e5e5e5;" class="menu-item" layout="row" layout-align="start center" ng-click="vm.openCentralLogger()">
+                    <md-item-content style="border-bottom: 1px solid #e5e5e5;" class="menu-item" layout="row" layout-align="start center" ng-click="$root.openCentralLogger()">
                         <md-button flex><span class="fa fa-file-text-o"></span><span>Central Logs</span></md-button>
                     </md-item-content>
                 </md-item>
@@ -251,7 +251,7 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openGangliaLink()">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="$root.openGangliaLink()">
                         <md-button flex><span class="fa fa-area-chart"></span><span>Cluster Monitoring (Ganglia)</span></md-button>
                     </md-item-content>
                 </md-item>
