added NASA APOD picture and explanation widget for dashboard

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
+<script src="app/widgets/apod/apod-widget.js"></script>
 <script src="app/widgets/gantt/gantt-widget.js"></script>
 <script src="app/widgets/dashboard-structures.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
