--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script src="bower_components/jsjws/ext/json-sans-eval-min.js"></script>
 <script src="bower_components/jsrsasign/jsrsasign-4.7.0-all-min.js"></script>
 <script src="bower_components/d3/d3.min.js"></script>
-<script src="bower_components/jspdf/dist/jspdf.debug.js"></script>
+<script src="bower_components/jspdf/dist/jspdf.min.js"></script>
 <script src="bower_components/html2canvas/build/html2canvas.js"></script>
 <script src="bower_components/jspdf-autotable/jspdf.plugin.autotable.js"></script>
 <!--<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>-->
