first commit for sensor groups in sensor list

--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -1,12 +1,13 @@
-<div layout="column" flex ng-controller="SensorListCtrl as vm" style="max-height: 100%; min-height: 100%">
+<div layout="column" flex ng-controller="SensorListCtrl as vm">
 
-    <div flex layout="row" style="margin: 16px; max-height: 100%; min-height: 100%">
-        <div layout="column" style="min-width:138px;">
-            <div layout="column" style="margin-bottom: 8px" ng-repeat="node in vm.nodes | orderBy:node:true track by $index">
+    <div flex layout="row" style="margin: 16px;">
+        <div layout="column" style="min-width:150px;">
+            <div layout="column" ng-repeat="node in vm.nodes | orderBy:node:true track by $index"
+                class="md-whiteframe-z1" style="margin-bottom: 8px;">
                 <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
-                <div class="md-whiteframe-z1" style="overflow: auto">
+                <div flex style="overflow: auto">
                     <div ng-class="{'active-sensor-list-resource':vm.resourceSensorsBeingDisplayed === resource.name}"
                          ng-repeat="resource in vm.resourcesNames | filter:{'node':node} | orderBy:'name' track by $index"
                          style="position: relative">
@@ -21,6 +22,9 @@
             <md-toolbar class="md-whiteframe-z1" style=" min-height: 80px">
                 <div layout="row" layout-align="start center" style="margin-left: 16px; margin-top: 16px">
                     <span flex>Sensors {{' - ' + vm.resourceSensorsBeingDisplayed | uppercase}}</span>
+                    <md-button md-theme="{{themePrimaryButtons}}" class="md-primary md-raised" ng-click="vm.showSensorGroups()">
+                        Select a Sensor Groups
+                    </md-button>
                     <md-checkbox class="md-primary" ng-model="vm.hideNominalSensors" ng-click="$event.stopPropagation()"
                                  md-theme="{{themePrimaryButtons}}" style="font-size: 16px;">
                         Hide Nominal Sensors
