wip bringing katgui in line with katstore rewrite

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -149,7 +149,7 @@
             <div style="width: 100%; margin-top: 4px;" layout="row" layout-align="center center">
                 <span ng-show="vm.sensorSearchNames.length === 1000" title="Refine the search to see more sensors"
                       class="fa fa-warning"></span>
-                <span ng-show="vm.sensorSearchNames.length > 1" style="margin-left: 4px;">Displaying {{vm.sensorSearchNames.length}} results.</span>
+                <span ng-show="vm.sensorSearchNames.length > 1" style="margin-left: 4px;"><i>Displaying {{vm.sensorSearchNames.length}} result(s).</i></span>
                 <span ng-show="vm.sensorSearchNames.length === 1" style="margin-left: 4px;">There is 1 result.</span>
                 <span ng-show="vm.sensorSearchNames.length === 0" style="margin-left: 4px;">There are no results.</span>
             </div>
